--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Webpack App</title>
+    <title>PIXI Glitch Experiment</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.css" integrity="sha384-b/NoaeRXkMxyKcrDw2KtVtYKkVg3dA0rTRgLoV7W2df3MzeR1eHLTi+l4//4fMwk" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="code"></div>
     <script type="text/javascript" src="./js/main.js"></script>
-
 </body>
 
 </html>
